--- a/Stage4/src/Stage4_Integrate_Matches.ipynb
+++ b/Stage4/src/Stage4_Integrate_Matches.ipynb
@@ -37,7 +37,9 @@
   {
    "cell_type": "code",
    "execution_count": 246,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Read the CSV files and set 'MID' as the key attribute\n",
@@ -59,7 +61,9 @@
   {
    "cell_type": "code",
    "execution_count": 248,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "path_M = datasets_dir + os.sep + 'Matched_Output.csv'\n",
@@ -2877,7 +2881,9 @@
   {
    "cell_type": "code",
    "execution_count": 252,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#writing G to a file for manual labelling\n",
@@ -2910,7 +2916,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
